syntax = "proto2";

package win.liumian.qt.common.proto;


//optimize_for 加快解析的速度
option optimize_for = SPEED;
option java_package = "win.liumian.qt.common.proto";
option java_outer_classname = "QuantumMessage";

message Message{

  required string networkId = 9;
  required MessageType messageType = 10;
  optional string channelId = 11;
  optional string targetHost = 12;
  optional int32 targetPort = 13;
  optional bytes data = 14;
}

enum MessageType{
  /**
  * 注册请求
  */
  REGISTER = 1;
  /**
   * 注册成功
   */
  REGISTER_SUCCESS = 2;
  /**
   * 注册失败
   */

  /**
   * 连接成功
   */
  REGISTER_FAILED = 3;

  CONNECTED = 4;
  /**
   * 断开连接
   */
  PROXY_DISCONNECTED = 5;
  /**
   * 传输数据
   */
  DATA = 6;
  /**
   * 保持链接
   */
  KEEPALIVE = 7;

  /**
   * 用户链接断开
   */
  USER_DISCONNECTED = 8;
}